// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty CustomerModal component renders correctly 1`] = `
<div
  id="modal"
>
  <button
    className="customer-modal-close-btn"
    onClick={[MockFunction]}
  >
    <svg
      fill="none"
      height="25"
      viewBox="0 0 24 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M19 6.91L17.59 5.5L12 11.09L6.41 5.5L5 6.91L10.59 12.5L5 18.09L6.41 19.5L12 13.91L17.59 19.5L19 18.09L13.41 12.5L19 6.91Z"
        fill="#025198"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="customer-modal"
  />
</div>
`;

exports[`Non empty CustomerModal component renders correctly 1`] = `
<div
  id="modal"
>
  <button
    className="customer-modal-close-btn"
    onClick={[MockFunction]}
  >
    <svg
      fill="none"
      height="25"
      viewBox="0 0 24 25"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M19 6.91L17.59 5.5L12 11.09L6.41 5.5L5 6.91L10.59 12.5L5 18.09L6.41 19.5L12 13.91L17.59 19.5L19 18.09L13.41 12.5L19 6.91Z"
        fill="#025198"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="customer-modal"
  >
    <div
      className="heading"
    >
      <h2
        className="title"
      >
        Login
      </h2>
      <p>
        If you have an account with us, please log in.
      </p>
    </div>
    <form
      className=""
      noValidate={true}
      onSubmit={[Function]}
    >
      <label
        className="form-label"
      >
        customer:Email
      </label>
      <input
        className="form-control"
        name="email"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <div
        className="invalid-feedback"
      />
      <label
        className="form-label"
      >
        customer:Password
      </label>
      <input
        className="form-control"
        name="password"
        onChange={[Function]}
        required={true}
        type="password"
        value=""
      />
      <div
        className="invalid-feedback"
      />
      <div
        className="form-footer"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit"
        >
          customer:Login
        </button>
        <button
          className="forget-pass btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          customer:Forgot your password?
        </button>
      </div>
    </form>
  </div>
</div>
`;
